revise the application

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"cSpell.words": ["homearea", "minmax", "Shodai"]
+	"cSpell.words": ["homearea", "minmax", "preorder", "Shodai", "Shodaimama"]
 }
